Painting Interaction + Sidescroller work

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F8764228411FD21F7FE4D1AB57B95553
-ProjectName=Third Person Game Template
+ProjectName=Prototype1: CastleGame
+
