Working out UI issues

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/Maps/CastleMap/CastleLevel.CastleLevel
+EditorStartupMap=/Game/Maps/CastleMap/CastleLevel.CastleLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_CastleGameGameMode.BP_CastleGameGameMode_C
 GameInstanceClass=/Game/MyGameInstance.MyGameInstance_C
 
