Added in sounds, still missing castle music, fixed UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/CastleMap/CastleLevel.CastleLevel
-EditorStartupMap=/Game/Maps/CastleMap/CastleLevel.CastleLevel
+GameDefaultMap=/Game/Maps/MainMenu/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/Game/BP_CastleGameGameMode.BP_CastleGameGameMode_C
 GameInstanceClass=/Game/MyGameInstance.MyGameInstance_C
 
